# course-cli

./: .env.example  .gitignore  Makefile  module.yaml  pyproject.toml
.githooks/: pre-commit
src/course_cli/: __main__.py  cli.py  init.py  report.py  validate.py  xapi.py
test_courses/fully_valid_course/: course.yaml  index.md
test_courses/fully_valid_course/lessons/: lesson1.md
test_courses/invalid_course/: course.yaml
test_courses/valid_course/: course.yaml
test_courses/with_broken_links/: course.yaml  index.md
test_courses/with_broken_links/lessons/: lesson1.md
tests/unit/: test_cli.py  test_init.py  test_report.py  test_validate.py  test_xapi.py
